Added new CSS file to demonstrate cascaing

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <title>My website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles1.css">
 
 </head>
 <body>
     <div>
         <div>
-        <p>Navbar</p> 
-        <p>Home</p> 
-        <p>Link</p>
-        <p>Disabled</p>
+        <p class="nav-link-items">Navbar</p> 
+        <p class="nav-link-items">Home</p> 
+        <p class="nav-link-items">Link</p>
+        <p class="nav-link-items">Disabled</p>
         <input type= "text">
-        <button>Search</button>
+        <button class="nav-link-items">Search</button>
       </div>
       
       <div>
